# LangChainAIAgentSource

./: .gitignore  README.md  README_EN.md  aiagent.ipynb  graph_basic.ipynb  graph_ragbot.ipynb  graph_webbot.ipynb  langchain_basic.ipynb  langchain_bot.ipynb  langchain_chain.ipynb  langchain_middle.ipynb  langchain_webbot.ipynb  langgraph.json  llm_basic.ipynb  main.py  pyproject.toml  requirements.txt  show_models.ipynb
backend/: agent_graph.py  server.py
data/txt/: employee_handbook.txt  expense_policy.txt  security_policy.txt
frontend/: app.js  index.html  style.css
frontend_ls/: app.js  index.html
graphs/: agent_graph.py
