[project]
name = "langchainaiagentsource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "fastapi[all]==0.121.3",
    "httpx==0.28.1",
    "jsonschema-rs==0.29.1",
    "jupyter==1.1.1",
    "langchain==1.0.8",
    "langchain-community==0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai==1.0.3",
    "langchain-tavily==0.2.13",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.3",
    "langgraph-api==0.5.42",
    "langgraph-checkpoint-sqlite==3.0.1",
    "langgraph-cli[inmem]==0.4.11",
    "langgraph-sdk==0.2.15",
    "langserve==0.3.3",
    "openai==2.8.1",
    "python-dotenv==1.2.1",
    "setuptools==80.9.0",
    "tavily-python==0.7.13",
    "tiktoken==0.12.0",
    "uvicorn==0.38.0",
    "wheel==0.45.1",
]
